--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,15 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Nathan F. | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="Site développé en React.js">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Nathan F. | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
-  <meta itemprop="image"
-    content="https://avatars.githubusercontent.com/u/112586749?v=4">
+  <meta itemprop="description" content="Site développé en React.js">
+  <meta itemprop="image" content="https://raw.githubusercontent.com/Nolucci/Portfolio-2025/main/src/Assets/logo.png">
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
 
